--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Anime Sedai | 动画世代</title>
+        <title>Webfic Sedai</title>
+        <meta 
+            name="description" 
+            content="Build a list of the 'canonical' webfic you've read and share it with your friends." />
+        <meta
+            property="og:description"
+            content="Build a list of the 'canonical' webfic you've read and share it with your friends." />
         <link rel="stylesheet" href="/src/index.css" />
-        <script
-            async
-            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6132862500355662"
-            crossorigin="anonymous"
-        ></script>
     </head>
     <body>
         <div id="app"></div>
