--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Webfic Sedai</title>
+        <title>Ages of Webfic</title>
         <meta 
             name="description" 
             content="Build a list of the 'canonical' webfic you've read and share it with your friends." />
