add missing tags

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
         <meta 
             name="description" 
             content="Build a list of the 'canonical' webfic you've read and share it with your friends." />
+        <meta property="og:title" content="Ages of Webfic" />
         <meta
             property="og:description"
             content="Build a list of the 'canonical' webfic you've read and share it with your friends." />
-        <meta property="og:image" content="/preview.png">
-        <meta property="og:url" content="https://webfic.recordcrash.com">
-        <meta property="og:type" content="website">
+        <meta property="og:image" content="/preview.png" />
+        <meta property="og:url" content="https://webfic.recordcrash.com" />
+        <meta property="og:type" content="website" />
         <link rel="stylesheet" href="/src/index.css" />
     </head>
     <body>
