add basic (privacy preserving) analytics

--- a/index.html
+++ b/index.html
@@ -1,24 +1,42 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Ages of Webfic</title>
-        <link rel="icon" href="/favicon.png">
-        <meta 
-            name="description" 
-            content="Build a list of the 'canonical' webfic you've read and share it with your friends." />
-        <meta property="og:title" content="Ages of Webfic" />
-        <meta
-            property="og:description"
-            content="Build a list of the 'canonical' webfic you've read and share it with your friends." />
-        <meta property="og:image" content="/preview.png" />
-        <meta property="og:url" content="https://webfic.recordcrash.com" />
-        <meta property="og:type" content="website" />
-        <link rel="stylesheet" href="/src/index.css" />
-    </head>
-    <body>
-        <div id="app"></div>
-        <script type="module" src="/src/main.tsx"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Ages of Webfic</title>
+    <link rel="icon" href="/favicon.png" />
+
+    <meta 
+      name="description" 
+      content="Build a list of the 'canonical' webfic you've read and share it with your friends." 
+    />
+    <meta property="og:title" content="Ages of Webfic" />
+    <meta
+      property="og:description"
+      content="Build a list of the 'canonical' webfic you've read and share it with your friends."
+    />
+    <meta property="og:image" content="/preview.png" />
+    <meta property="og:url"   content="%VITE_SITE_URL%" />
+    <meta property="og:type"  content="website" />
+
+    <link rel="stylesheet" href="/src/index.css" />
+  </head>
+
+  <body>
+    <div id="app"></div>
+
+    <script type="module">
+      if (import.meta.env.PROD && import.meta.env.VITE_UMAMI_SCRIPT && import.meta.env.VITE_UMAMI_WEBSITE_ID) {
+        const s = document.createElement("script");
+        s.defer = true;
+        s.async = true;
+        s.src = import.meta.env.VITE_UMAMI_SCRIPT;
+        s.dataset.websiteId = import.meta.env.VITE_UMAMI_WEBSITE_ID;
+        document.body.appendChild(s);
+      }
+    </script>
+
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
