--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
     <title>Ages of Webfic</title>
     <link rel="icon" href="/favicon.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open Sans:wght@400;500;600&display=swap"
+      rel="stylesheet" crossorigin="anonymous"
+    />
 
     <meta 
       name="description" 
