--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 
     <title>Ages of Webfic</title>
     <link rel="icon" href="/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Open Sans:wght@400;500;600&display=swap"
+      rel="stylesheet" crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap"
       rel="stylesheet" crossorigin="anonymous"
     />
 
